# rustROM

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  STYLE.md  TODO.md  build.rs
.github/: FUNDING.yml
data/: .gitignore  cmd_alias.json  rustrom.world
data/areas/: root.area  root.room
data/help/: bool.toml  desc.toml  dig.toml  dir.toml  dmg.toml  goto.toml  hedit-admin.toml  hedit-alias.toml  hedit-builder.toml  hedit-internal-commands.toml  look.toml  return.toml  set.toml  title.toml
data/rooms/: not-so-root.room  root.room
data/save/: dummy.save
src/: cmd.rs  game_loop.rs  io.rs  item.rs  main.rs  mob.rs  player.rs  string.rs  test.rs  traits.rs  util.rs  world.rs
src/cmd/: _template_command.rs  _tst.rs  abort.rs  ac.rs  ask.rs  asqi.rs  badname.rs  bc.rs  channels.rs  close.rs  cmd_alias.rs  create.rs  dig.rs  dmg.rs  drop.rs  emote.rs  force.rs  give.rs  goto.rs  hedit.rs  help.rs  inventory.rs  lock.rs  look.rs  macros.rs  mod.rs  open.rs  put.rs  quit.rs  redit.rs  return.rs  say.rs  scry.rs  set.rs  shout.rs  shutdown.rs  sync.rs  take.rs  translocate.rs  tst.rs  (+1 more)
src/cmd/hedit/: admin.rs  alias.rs  builder.rs  data.rs  desc.rs  save.rs  title.rs
src/cmd/redit/: desc.rs  exit.rs  save.rs  title.rs
src/item/: blueprint.rs  inventory.rs  item.rs  key.rs  mod.rs  tool.rs  weapon.rs
src/mob/: core.rs  faction.rs  gender.rs  mod.rs  stat.rs
src/player/: access.rs  mod.rs  pc.rs  save.rs  savefile.rs
src/string/: alpha.rs  ansi.rs  boolean.rs  exclaim.rs  mod.rs  newline.rs  piglatin.rs  prompt.rs  robust_parse.rs  rx.rs  sanitize.rs  slug.rs  styling.rs  unicode.rs  uuid_id.rs
src/traits/: describe.rs  identity.rs  mob.rs  mod.rs  owned.rs  save.rs  tickable.rs
src/util/: badname.rs  boolean.rs  clientstate.rs  comm.rs  contact.rs  direction.rs  ed.rs  github.rs  help.rs  mod.rs  password.rs
src/world/: area.rs  exit.rs  mod.rs  room.rs  world.rs
(+8 files in other folders)
