[package]
name = "rustrom"
version = "0.1.29"
edition = "2024"
authors = ["Markku Sukanen <markku.sukanen@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
ansi_term = "0.12.1"
argon2 = { version = "0.5.3", features = ["std"]}
async-trait = "0.1.88"
clap = { version = "4.5.42", features = ["derive", "env"]}
dicebag = "0.3.0"
env_logger = "0.11.8"
log = "0.4.27"
once_cell = "1.21.3"
paste = "1.0.15"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sha1 = "0.10.6"
tokio = { version = "1.47", features = ["full"] }
toml = "0.9.2"
walkdir = "2.5"

[badges]
maintenance = { status = "experimental" }

[build-dependencies]
walkdir = "2.5"
heck = "0.5"

[features]
localtest = []
ittest = ["localtest"]
