[package]
name = "rustrom"
version = "0.1.46"
edition = "2024"
authors = ["Markku Sukanen <markku.sukanen@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
ansi_term = "0.12.1"
argon2 = { version = "0.5.3", features = ["std"]}
async-trait = "0.1.89"
clap = { version = "4.5.60", features = ["derive", "env"]}
dicebag = "0.3"
either = "1.15.0"
env_logger = "0.11.9"
futures = "0.3.32"
lazy_static = "1.5.0"
log = "0.4.29"
once_cell = "1.21.3"
paste = "1.0.15"
regex = "1.12.3"
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.10.6"
tokio = { version = "1.50", features = ["full"] }
toml = "1"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
walkdir = "2.5"

[badges]
maintenance = { status = "experimental" }

[build-dependencies]
walkdir = "2.5"
heck = "0.5"

[features]
localtest = []
ittest = ["localtest"]
no-hibp = []
